Coppied generated code from below prompt
it needs to have four players

Each player can only play on their edge of the board

Each player can only play one monster at a time

After they play a monster, they can move any other monster they have placed

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,22 @@
     background-color: white;
 }
 
+.player1 {
+    background-color: lightblue;
+}
+
+.player2 {
+    background-color: lightgreen;
+}
+
+.player3 {
+    background-color: lightcoral;
+}
+
+.player4 {
+    background-color: lightgoldenrodyellow;
+}
+
 .vampire {
     background-color: red;
 }
